--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -10,17 +10,30 @@
       width: 70px;
       padding: 25px;
     }
-  
-    .options {
+    .menu{
       width: 50%;
       height: 100%;
       display: flex;
-      align-items: center;
+      flex-direction: column;
+      align-items: flex-end;
       justify-content: flex-end;
-  
-      .option {
-        padding: 10px 15px;
-        cursor: pointer;
+      .options {
+        display: flex;
+        align-items: center;
+        vertical-align: bottom;
+        .option {
+          padding: 5px 15px;
+          cursor: pointer;
+        }
+      }
+      .welcome {
+        margin-top: 0;
+        padding : 0 15px;
+        text-align: right;
+        width: 50%;
+        height: 100%;
+        align-items: right;
+        margin-left: auto;
       }
     }
   }
